@@ -1031,6 +1031,8 @@ void end_game(int err = 0);
 void set_alignment_color(signed char alignment, bool extended_range = false);
 /* Sets the text color per activity type */
 void set_activity_color(long activity_type);
+/* Sets  the color basing on how high attribute is */
+void set_attribute_color(const short attribute_value, bool reverse=false);
 /* location and squad header */
 void locheader(void);
 /* prints Creature's name colored according to hisher juice level */
