@@ -1,5 +1,6 @@
 Changelog for version 4.8-git:
 
+* Added attribute coloring (according to how high it is at the moment)
 * Added displaying squad's id and name during raids.
 * Changed brief view to show more exact numbers of skill progress (to be able to
 observe comfortably how your skill grows when performing actions during raids)
